--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 </head>
 <body>
   <div class="buttons">
-    <button onclick="pickCharacters(1)">1人選ぶ</button>
-    <button onclick="pickCharacters(3)">3人選ぶ</button>
-    <button onclick="pickCharacters(5)">5人選ぶ</button>
+    <button onclick="pickCharacters(1)">1</button>
+    <button onclick="pickCharacters(3)">3</button>
+    <button onclick="pickCharacters(5)">5</button>
   </div>
 
   <div class="result" id="result"></div>
